[gd_scene load_steps=6 format=3 uid="uid://bjcjuy22uptv7"]

[ext_resource type="PackedScene" uid="uid://unhn550j2wd7" path="res://src/level/hud/module_state/module_state.tscn" id="1_svfos"]
[ext_resource type="Script" path="res://src/level/hud/rover_state/rover_state.gd" id="1_tym5t"]
[ext_resource type="PackedScene" uid="uid://c6nyjrll1e2vs" path="res://src/level/hud/module_state/power_module_animation_player.tscn" id="3_6ruc5"]
[ext_resource type="PackedScene" uid="uid://c1483ukdmeko2" path="res://src/level/hud/module_state/engine_module_animation_player.tscn" id="4_ku3s1"]
[ext_resource type="FontFile" uid="uid://c38jj7whpgm8m" path="res://src/font/pico-8.ttf" id="5_qhebp"]

[node name="RoverState" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -1
script = ExtResource("1_tym5t")
_move_counter_normal = Color(1, 0.945098, 0.909804, 1)
_move_counter_danger = Color(1, 0, 0.301961, 1)

[node name="PowerModuleState" parent="." instance=ExtResource("1_svfos")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
_animation_player_scene = ExtResource("3_6ruc5")

[node name="EngineModuleState" parent="." instance=ExtResource("1_svfos")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
module = 1
_animation_player_scene = ExtResource("4_ku3s1")

[node name="MoveCounter" type="ColorRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(11, 9)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
color = Color(0.372549, 0.341176, 0.309804, 1)

[node name="Background" type="ColorRect" parent="MoveCounter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MoveCounterLabel" type="Label" parent="MoveCounter/Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_qhebp")
theme_override_font_sizes/font_size = 6
text = "32"
